--- a/home-page.css
+++ b/home-page.css
@@ -1,14 +1,12 @@
 .navigation {
     text-align:left;
     max-height: 50px;
-    grid-row: 1;
 }
-
 body {
     display: grid;
     max-width: none;
     grid-template-columns: 45% auto;
-    grid-template-rows: 33% 33% auto;
+    grid-template-rows: 12% 25% auto;
     column-count: 2;
     background-color: blanchedalmond;
     list-style: none;
@@ -18,7 +16,7 @@ h1 {
     max-height: 5em;
     margin: 4%;
 }
-.spbottle {
+.sp {
     width: 20em;
     max-width: 500px;
     grid-column: 3;
@@ -33,14 +31,23 @@ h1 {
 .about {
     text-align: left;
     grid-column: 1/2;
+    padding: 12px;
 }
 .education {
     text-align: right;
-    grid-column: 2/3;
+    grid-column: 1;
+    padding: 12px;
+}
+.bottle {
+    width: 110%;
+    max-width: 700px;
+    grid-column: 3;
+    align-items: right;
 }
 .skills {
     text-align: right;
     grid-column: 1/2;
+    padding: 12px;
 }
 footer{
     color: rgb(47, 62, 62);
