--- a/home-page.css
+++ b/home-page.css
@@ -1,6 +1,79 @@
-.navigation {
-    text-align:left;
-    max-height: 50px;
+nav {
+     /* mobile first */
+        margin: 0;                         /* Set general page settings for font, margins and padding */
+        padding: 0;
+        font-family: sans-serif;
+   }
+   .menu-wrap {                             /* .menu-wrap contains all parts of our responsive navigation */
+        height: 3em;                       /* Set default height for navigation */
+        background-color: rgb(217, 130, 161);            /* Set background color for entire navigation (useful for horizontal menu)*/
+        padding: 10px 15px;                /* Set padding around navigation */
+        /*position: fixed;*/               /* Uncomment out this line to lock navigation to top of window when scrolling */
+        width: 100%;                       /* Have navigation fill entire horizontal space */
+   }
+   .menu-icon {
+        font-size: 2em;                    /* Set size of hamburger menu icon */
+        color: rgb(138, 44, 81);                       /* Set color of hamburger menu icon */
+   }
+   nav {
+        position: absolute;                /* Absolute positions nav on page */
+        background-color: rgb(217, 130, 161);            /* Set background color for nav (useful when nav becomes vertical)*/
+        top: 3.5em;                        /* Add space to top of screen so links are below hamburger icon */
+        left:0;                            /* Navigation links should appear on left side of screen */
+        width: 100%;                       /* Similar to .menu-wrap, nav should fill entire horizontal space */
+   }
+   nav ul {
+        list-style-type: none;             /* Get rid of bullets on unordered list (navigation links) */
+        max-height: 0em;                   /* Section containing navigation links should be collapsed until hamburger menu icon is toggled */
+        overflow: hidden;                  /* Content of collapsed section should be hidden */
+        transition: max-height 0.5s;       /* Transition between opening and closing of navigation should take 0.5 seconds */
+   }
+   nav ul li a {
+        display: block;                    /* Links should be displayed as block (each link taking up its required space on a new line) */
+        padding: .75em 1.75em;             /* Set padding for each navigation link */
+        color: #fff;                       /* Set color for navigation links */
+        text-decoration: none;             /* Get rid of underlines on navigation links */
+   }
+   nav ul li a:hover, nav ul li a:focus {
+        color: rgb(138, 44, 81);                       /* Change color of link when hovered over or focused on */
+   }
+   #checkbox {
+        display: none;                     /* Although the checkbox functionality is needed, we don't want to see the actual checkbox */
+   }
+   #checkbox:checked ~ nav ul {
+        max-height: 11em;                  /* When the checkbox is checked, expand the height of ul to reveal navigation */
+   }
+    /* desktop/large screen settings */
+   @media (min-width: 768px) {             /* Media Query for larger screens */
+        .menu-icon {
+             display: none;                /* Hide hamburger menu icon on larger screens */
+        }
+        nav {
+             position: relative;
+             top: -1em;                    /* Move navigation links up (as they no longer need to be below hamburger icon) */
+        }
+        nav ul {
+             /* max-height: 0.75em;           Adjust max-height to fit content horizontally rather than vertically */
+             padding: 15px 0;
+        }
+        nav ul li {
+             display: inline-block;        /* Display list items as an inline-block (on a single line) */
+             padding-left: 1em;            /* Add padding between horizontal links */
+        }
+   }
+   /* General page styles */
+   section {
+        padding-top: 3em;
+   }
+   h1 {
+        text-align: center;
+        padding: 1.5em 1.5em 1em;
+        line-height: 1.2;
+   }
+   p {
+        line-height: 1.6;
+        padding: 0 2em;
+        text-align: center; 
 }
 body {
     display: grid;
